Move ADD MORE subpages to a fixed position on the right of the Subpages title to prevent jumping

--- a/pontoon/base/static/css/style.css
+++ b/pontoon/base/static/css/style.css
@@ -472,6 +472,11 @@ body.admin-form #intro {
   text-transform: uppercase;
 }
 
+#pontoon.admin-form #intro form a.add-subpage {
+  font-size: 14px;
+  margin-top: 17px;
+}
+
 #pontoon.admin-form #intro .controls a {
   margin: 7px;
 }
